# athena-dr

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py  test_traces.py
.cache-Soumiks-MacBook-Pro.local/diskcache/: cache.db-shm  cache.db-wal
athena_dr/: __init__.py  utils.py
athena_dr/agent/: __init__.py  agent_interface.py  client.py  deep_research.py  model.py  prompts.py  token_limited_agent.py  workflow.py
athena_dr/agent/dataset_utils/: data_types.py  load_dataset.py
athena_dr/agent/mcp_backend/: main.py
athena_dr/agent/mcp_backend/apis/: crawl4ai_docker_api.py  data_model.py  jina_apis.py  massive_serve_apis.py  pubmed_apis.py  reranker_apis.py  semantic_scholar_apis.py  serper_apis.py
athena_dr/agent/mcp_backend/local/: crawl4ai_fetcher.py
athena_dr/agent/mcp_backend/local/webparsers/: webthinker.py
athena_dr/agent/shared_prompts/: __init__.py  eval.py  evol_instruct.py  native_tool_calling.py  unified_tool_calling.py  unified_tool_calling_v20250907.yaml  unified_tool_calling_v20251217.yaml
athena_dr/agent/tool_interface/: __init__.py  agent_as_tool.py  base.py  chained_tool.py  mcp_tools.py  tool_parsers.py
athena_dr/agent/tools/: __init__.py  code_execution.py  crawl4ai_fetch_content.py  jina_fetch_content.py  pubmed.py  semantic_scholar.py  serper_search.py  the_sports_db.py
athena_dr/agent/workflows/: __init__.py  auto_search_workflow.py  base.py  cli.py  evol_instruct.py  generate_trace.py  rejection_sampling.py  sub_agents.py  web_page_reader.py
athena_dr/evals/: __init__.py  base.py  cli.py
athena_dr/evals/benchmarks/: __init__.py  gaia.py
benchmarks/: index.html
cli/: index.html
configs/: auto_search_configs.yml  deep_research.yml  glm.yml  grader_configs.yml  openai_configs.yml  openrouter.yml  tulu.yml
configs/auto_search_configs/: openrouter.yml  vllm.yml
configs/gaia/: custom_endpoint.yml  default.yml
docs/: benchmarks.md  cli.md  index.md  plan.md  tools.md
notebooks/: analyze_openscholar.ipynb
output/gaia/validation/: glm-4.5-air-gaia-test.jsonl  glm-4.5-air-test.jsonl  glm-test.jsonl
plan/: index.html
scripts/: generate_sft_trace.py  run_gaia.py  run_gaia_with_mcp.py  server_vllm_modal.py  test_auto_search.py  test_glm_workflow.py  test_sft_trace_generation.py
search/: search_index.json
tools/: index.html
